# autorandr

./: Cargo.toml
src/: config.rs  errors.rs  lib.rs  main.rs  manager.rs  monitor.rs  output.rs  xhandle.rs
